# hmiscpy

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
data/: code_description.csv
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
notebooks/: 01_Demo.ipynb
src/hmispy/: __init__.py  cli.py  hmispy.py  utils.py
tests/: __init__.py  test_hmispy.py
