[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hmispy"
version = "0.1.0"
description = "Python package to extract information from pdfs uploaded by HMIS, MoHFW India."
readme = "README.rst"
authors = [
  {name = "Saket Choudhary", email = "saketkc@gmail.com"}
]
maintainers = [
  {name = "Saket Choudhary", email = "saketkc@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "pandas",
  "lxml",
  "html5lib"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/saketkc/hmispy/issues"
changelog = "https://github.com/saketkc/hmispy/blob/master/changelog.md"
homepage = "https://github.com/saketkc/hmispy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

